Ajustes para a inserção das fontes Poppins no site.

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     
     <!-- CSS Personalizado Modular -->
     <link rel="stylesheet" href="{% static 'styles/modular/main.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/modular/global.css' %}">
     
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
