--- a/static/styles/modular/departamentos.css
+++ b/static/styles/modular/departamentos.css
@@ -1,10 +1,12 @@
 /* Estilos para a página de departamentos */
-.page-departamentos .departamentos-page-titulo {
-    font-size: 2.8rem;
+.departamentos-page-titulo {
+    font-size: 2.0rem;
     font-weight: bold;
     color: #333;
-    padding: 40px 0 20px 0;
-    text-align: center;
+    padding: 60px 0 30px 0;
+    margin: 0;
+    text-align: left;
+    background-color: #f5eedf;
 }
 
 .ministerio-secao {
@@ -13,10 +15,10 @@
 }
 
 .ministerio-titulo {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: 30px;
-    text-align: center;
+    text-align: left;
 }
 
 /* --- ESTILO DO CARROSSEL E CARDS --- */
