Ajustes no formulário de cadastro

--- a/templates/base.html
+++ b/templates/base.html
@@ -148,7 +148,7 @@
             <div class="footer-other">
                 <h4>Other</h4>
                 <ul>
-                    <li><a href="http://127.0.0.1:8000/admin/" target="_blank">Painel de Controle</a></li>
+                    <li><a href="{% url 'usuarios:login' %}" target="_blank">Login de Membros</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">Privacy</a></li>
                 </ul>
