Aplicação definitiva do dashboard dos secretários. Ajustes no footer do site.

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,14 +111,14 @@
             <div class="footer-left">
                 <h3>Gálatas 6. 2-10</h3>
                 <p>² Levai as cargas uns dos outros, e assim cumprireis a lei de Cristo.</br>
-                    ³ Porque, se alguém cuida ser alguma coisa, não sendo nada, engana-se a si mesmo.</br>
-                    ⁴ Mas prove cada um a sua própria obra, e terá glória só em si mesmo, e não noutro.</br>
+                    ³ Porque, se alguém cuida ser alguma coisa, não sendo nada, </br>engana-se a si mesmo.</br>
+                    ⁴ Mas prove cada um a sua própria obra, e terá glória só em si mesmo, </br>e não noutro.</br>
                     ⁵ Porque cada qual levará a sua própria carga.</br>
                     ⁶ E o que é instruído na palavra reparta de todos os seus bens com aquele que o instrui.</br>
-                    ⁷ Não erreis: Deus não se deixa escarnecer; porque tudo o que o homem semear, isso também ceifará.</br>
-                    ⁸ Porque o que semeia na sua carne, da carne ceifará a corrupção; mas o que semeia no Espírito,</br> 
+                    ⁷ Não erreis: Deus não se deixa escarnecer; porque tudo o que o homem semear, </br>isso também ceifará.</br>
+                    ⁸ Porque o que semeia na sua carne, da carne ceifará a corrupção; </br>mas o que semeia no Espírito,</br> 
                       do Espírito ceifará a vida eterna.</br>
-                    ⁹ E não nos cansemos de fazer bem, porque a seu tempo ceifaremos, se não houvermos desfalecido.</br>
+                    ⁹ E não nos cansemos de fazer bem, porque a seu tempo ceifaremos, </br>se não houvermos desfalecido.</br>
                     ¹⁰ Então, enquanto temos tempo, façamos bem a todos, mas principalmente aos domésticos da fé.</p>
                 
                 <div class="social-links">
@@ -149,8 +149,7 @@
                 <h4>Other</h4>
                 <ul>
                     <li><a href="{% url 'usuarios:login' %}" target="_blank">Login de Membros</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Privacy</a></li>
+                    <li><a href="http://127.0.0.1:8000/admin/" target="_blank">Painel de Administrador</a></li>
                 </ul>
             </div>
         </div>
